--- a/DotNetBestFriend/DotNetBestFriend/DotNetBestFriend.csproj
+++ b/DotNetBestFriend/DotNetBestFriend/DotNetBestFriend.csproj
@@ -4,15 +4,15 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageId>DotNetBestFriend</PackageId>
-    <Version>4.0.0</Version>
+    <Version>4.0.1</Version>
     <Authors>Laurence Lam</Authors>
     <Company>Lam Technologies LTD</Company>
     <PackageDescription>Convenient extension methods for developers who are awesome enough to target their apps for .NET 8 and beyond</PackageDescription>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageVersion>4.0.0</PackageVersion>
+    <PackageVersion>4.0.1</PackageVersion>
     <Copyright>Lam Technologies LTD</Copyright>
     <Owners>Lam Technologies LTD</Owners>
-    <PackageReleaseNotes>Added support for .NET 9. Dropped support for .NET 6 and 7.</PackageReleaseNotes>
+    <PackageReleaseNotes>Fixed a bug with the IsValidAndMatches method inside the ValueTypeHelpers where zero or empty guid will pass if the string is invalid.</PackageReleaseNotes>
     <Summary>A bunch of programming tools for quick and safe data validation and manipulation</Summary>
     <Title>DotNetBestFriend</Title>
     <Description>The ultimate toolset for .NET Developers</Description>
